--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Title -->
     <h1>Unsplash API - Infinity Scroll</h1>
     <!-- Loader -->
-    <div class="loader" id="loader">
+    <div class="loader" id="loader" hidden>
         <img src="loader.svg" alt="Loading">
     </div>
     <!-- Script -->
