--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <div class="loader" id="loader" hidden>
         <img src="loader.svg" alt="Loading">
     </div>
+    <!-- Image Container -->
+    <div class="image-container" id="image-container">
+        <img src="https://images.unsplash.com/photo-1596962723914-7040ba09b2ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1532&q=80" alt="">
+        <img src="https://images.unsplash.com/photo-1596962723914-7040ba09b2ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1532&q=80" alt="">
+        <img src="https://images.unsplash.com/photo-1596962723914-7040ba09b2ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1532&q=80" alt="">
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
